--- a/src/main/webapp/i18n/zh-cn/doubleRandom.json
+++ b/src/main/webapp/i18n/zh-cn/doubleRandom.json
@@ -19,14 +19,16 @@
             "doubleRandomName": "Double Random Name",
             "doubleRandomDate": "Double Random Date",
             "doubleRandomNotary": "Double Random Notary",
-            "doubleRandomCompanyCondition1": "Double Random Company Condition 1",
-            "doubleRandomCompanyCondition2": "Double Random Company Condition 2",
-            "doubleRandomCompanyCondition3": "Double Random Company Condition 3",
-            "doubleRandomCompanyCondition4": "Double Random Company Condition 4",
-            "doubleRandomManagerCondition1": "Double Random Manager Condition 1",
-            "doubleRandomManagerCondition2": "Double Random Manager Condition 2",
-            "doubleRandomManagerCondition3": "Double Random Manager Condition 3",
-            "doubleRandomManagerCondition4": "Double Random Manager Condition 4",
+            "doubleRandomCompanyName": "Double Random Company Name",
+            "doubleRandomCompanyArea": "Double Random Company Area",
+            "doubleRandomCompanySupervisory": "Double Random Company Supervisory",
+            "doubleRandomCompanyType": "Double Random Company Type",
+            "doubleRandomCompanyIndustryType": "Double Random Company Industry Type",
+            "doubleRandomCompanyRatio": "Double Random Company Ratio",
+            "doubleRandomManagerName": "Double Random Manager Name",
+            "doubleRandomManagerNumber": "Double Random Manager Number",
+            "doubleRandomManagerDepartment": "Double Random Manager Department",
+            "doubleRandomManagerRatio": "Double Random Manager Ratio",
             "task": "Task",
             "doubleRandomResult": "Double Random Result"
         }
